fix: issue of button color in ios and make the spacing correct in input

--- a/packages/pillar-core/src/core/form/_form.css
+++ b/packages/pillar-core/src/core/form/_form.css
@@ -47,7 +47,7 @@
   }
 
   &:not(:has(.fi-Pr)) .fi-:not(.pin-input) {
-    padding-inline-start: 1rem;
+    padding-inline-start: 0.625em;
   }
 
   &:has(.fin-C) .fi- {
@@ -55,7 +55,7 @@
   }
 
   &:not(:has(.fi-Su)) .fi-:not(.pin-input) {
-    padding-inline-end: 1rem;
+    padding-inline-end: 0.625em;
   }
 }
 
