--- a/packages/pillar-core/src/css/generics/_form.css
+++ b/packages/pillar-core/src/css/generics/_form.css
@@ -22,6 +22,7 @@ input[type='number'] {
 button,
 a {
   cursor: pointer;
+  color: var(--B12);
 
   &:focus-visible {
     outline: 2px dashed var(--P9);
